# information-retrieval

./: README.md
.github/workflows/: api-production-build.yml  main_api-informationretrieval-prod.yml  main_app-informationretrieval-prod.yml  web-production-build.yml
information-retrieval-api/: Dockerfile  README.md  pyproject.toml  schema.prisma
information-retrieval-api/notebooks/: evaluate_models.ipynb  preprocess_and_build_models.ipynb
information-retrieval-api/src/: config.py  main.py
information-retrieval-api/src/api/: boolean_api.py  vector_space_api.py
information-retrieval-api/src/data_crawlers/: gnews_data_crawler.py  guardian_data_crawler.py  nyt_data_crawler.py
information-retrieval-api/src/db/: helper.py  models.py  posts.py  processed_posts.py  session.py
information-retrieval-api/src/evaluation/: evaluation.py
information-retrieval-api/src/information_retrieval/: boolean_model.py  linked_list.py  vector_space_model.py
information-retrieval-api/src/preprocessing/: preprocessing.py
information-retrieval-app/: README.md  package-lock.json  package.json
information-retrieval-app/app/: layout.tsx  page.tsx  providers.tsx
information-retrieval-app/app/api/: information_retrieval.ts
information-retrieval-app/app/components/: AdvancedFilter.tsx  ResultsList.tsx  SearchComponent.tsx
information-retrieval-app/components/: icons.tsx  theme-switch.tsx
information-retrieval-app/styles/: globals.css
