[project]
name = "information-retrieval-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiocache>=0.12.3",
    "bs4>=0.0.2",
    "fastapi>=0.121.2",
    "gunicorn>=23.0.0",
    "marshmallow>=4.1.0",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "prisma>=0.15.0",
    "scikit-learn>=1.7.2",
    "selenium>=4.38.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
